WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287761
[WebGPU] incorrect value passed to resolveCounters
https://bugs.webkit.org/show_bug.cgi?id=287761
Summary
[WebGPU] incorrect value passed to resolveCounters
Mike Wyrzykowski
Reported
2025-02-15 16:20:45 PST
[WebGPU] incorrect value passed to resolveCounters
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-02-15 16:29:13 PST
<
rdar://problem/144921860
>
Mike Wyrzykowski
Comment 2
2025-02-15 16:29:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40675
EWS
Comment 3
2025-02-17 00:21:50 PST
Committed
290472@main
(1487bfe01d6b): <
https://commits.webkit.org/290472@main
> Reviewed commits have been landed. Closing PR #40675 and removing active labels.
EWS
Comment 4
2025-02-20 12:11:49 PST
Committed
289651.146@safari-7621-branch
(738ac57d94ed): <
https://commits.webkit.org/289651.146@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2625 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug