[WebGPU] incorrect value passed to resolveCounters https://bugs.webkit.org/show_bug.cgi?id=287761 rdar://144921860

Reviewed by Tadeu Zagallo.

We were passing [0, querySet.count()) instead of [firstQuery, queryCount)
as the JS API requires.

This was incorrect and led to data being copied into the output buffer
from the wrong location.

* LayoutTests/fast/webgpu/nocrash/fuzz-287761-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-287761.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::resolveQuerySet):

Canonical link: https://commits.webkit.org/290472@main